[project]
name = "bjoern-gunicorn-uvicorn-flask-test"
version = "0.1.0"
description = ""
authors = [
  {name = "Marc-Aurèle Brothier", email = "m@brothier.org"},
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "asgiref>=3.8.1",
    "flask>=3.1.1",
]

[dependency-groups]
bjoern = [
    "bjoern==3.2.2",
]
dev = [
    "locust==2.37.10",
]
gunicorn = [
    "gunicorn==23.0.0",
]
uvicorn = [
    "uvicorn[standard]==0.34.3",
]
